--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -35,7 +35,7 @@
                 </div>
 
                 <p class="feed_content col-xs-12">
-                  <%= e.body.html_safe %></p>
+                  <%= e.body.gsub(/(?:\n\r?|\r\n?)/, '<br>').html_safe %></p>
                 <p class="feed_etc col-xs-12">
                   <%= e.time_ago %>
                   ·
