--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -30,7 +30,7 @@
 
                 <div class="col-xs-12 col-sm-5">
                   <div class="rating_div">
-                    <%= e.is_like %>
+                    <%= e.like.status %>
                   </div>
                 </div>
 
