--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -14,7 +14,7 @@
             <div class="col-xs-12 col-sm-5">
               <div class="rating_div">
                 <div class="rating-head">총점</div>
-                <%= e.is_like %>
+                <%= e.like.status %>
               </div>
             </div>
 
