--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,10 +1,5 @@
 <div>
-  <%= simple_form_for @evaluation, html: {novalidate: 'novalidate'} do |f| %>
-      <div class="score_bar">
-        <%= f.hidden_field :course_id, value: @course.id %>
-        <%= f.select :is_like, options_for_select([["좋아요",true],["싫어요",false]]) %>
-      </div><br>
-
+  <%= form_for @evaluation, html: {novalidate: 'novalidate'} do |f| %>
       <div class="score_body" style="vertical-align: top;">주관식 평가</div>
       <div class="score_bar write_comment_div">
         <%= f.text_area :body, minlength: @minimum_length, placeholder: "위의 내용 외에 더 자세히 작성해주시면 큰 도움이 될거에요!\n(최소 3줄 이상 작성해야 합니다.)", rows: 8, class: "write_comment_box" %>
