--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -13,8 +13,8 @@
 
             <div class="col-xs-12 col-sm-5">
               <div class="rating_div">
-                <div class="rating-head">총점</div>
-                <%= e.like.status %>
+                <div class="rating-head">이 강의를 좋아하냐</div>
+                <%= e.like.is_like %>
               </div>
             </div>
 
