--- a/app/views/courses/_like_form.html.erb
+++ b/app/views/courses/_like_form.html.erb
@@ -1,6 +1,6 @@
 <div class="score_bar">
-  <%= form_for @like, html: {novalidate: 'novalidate'} do |f| %>
+  <%= form_for Like.new, html: {novalidate: 'novalidate'} do |f| %>
     <%= f.hidden_field :course_id, value: @course.id %>
-    <%= f.select :status, options_for_select([["좋아요","true"],["싫어요","false"]]) %>
+    <%= f.select :is_like, options_for_select([["좋아요",true],["싫어요",false]]) %>
   <% end %>
 </div><br>
