--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -12,12 +12,12 @@
               <%= @course.lecture.name %>
               <% if @current_user %>
                 <%= hidden_field_tag 'c_id', @course.id %>
-                  <% if Favorite.exists?(course_id: @course.id, user_id: @current_user.id) %>
-                    <%= button_tag class: 'favorite_btn', id: 'favorite_delete_btn' do %>
-                      <i class="fa fa-heart favorite" aria-hidden="true"></i>
-                    <% end %>
+                <% if Favorite.exists?(course_id: @course.id, user_id: @current_user.id) %>
+                  <%= button_tag class: 'favorite_btn', id: 'favorite_delete_btn' do %>
+                    <i class="fa fa-heart favorite" aria-hidden="true"></i>
+                  <% end %>
                 <% else %>
-                    <%= button_tag class: 'favorite_btn', id: 'favorite_add_btn' do %>
+                  <%= button_tag class: 'favorite_btn', id: 'favorite_add_btn' do %>
                     <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
                   <% end %>
                 <% end %>
@@ -78,7 +78,7 @@
 
     <div class="info_score col-xs-12 row">
       <% if @course.evaluations.exists? %>
-        좋아요<%= @like %> (<%= @like_per %>) - 싫어요<%= @dislike %> (<%= @dislike_per %>)
+        좋아요 <%= @like %> (<%= @like_per %>%) - 싫어요 <%= @dislike %> (<%= @dislike_per %>%)
         <br>
         <%= @count %>명의 학생이 평가했습니다.
       <% else %>
