--- a/app/views/courses/_like_form.html.erb
+++ b/app/views/courses/_like_form.html.erb
@@ -4,16 +4,22 @@
   <%= hidden_field_tag 'c_id', @course.id %>
     <%# 좋아요가 아예 없는 경우, 좋아요 %>
     <% if !(Like.exists?(course_id: @course.id, user_id: @current_user.id)) %>
-      <%= hidden_field_tag 'boolean', true %>
-      좋아요가 아예 없는 경우, 좋아요
-      <%= button_tag id: 'is_like_create_btn' do %>
+      <%= button_tag class: 'like_btn', id: 'like_create_btn' do %>
+        <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
       <% end %>
+
     <%# 좋아요가 눌린 경우 %>
     <% elsif (Like.find_by(course_id: @course.id, user_id: @current_user.id)).is_like == true %>
-      좋아요가 눌린 경우
+      <%= button_tag class: 'like_btn', id: 'like_delete_btn' do %>
+        <i class="fa fa-heart favorite" aria-hidden="true"></i>
+      <% end %>
+
+
     <%# 싫어요가 눌린 경우 %>
     <% else %>
-      싫어요가 눌린 경우
+      <%= button_tag class: 'like_btn', id: 'like_create_dislike_delete_btn' do %>
+          <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
+      <% end %>
   <% end %>
 <% end %>
 
@@ -22,57 +28,153 @@
     <%= hidden_field_tag 'c_id', @course.id %>
     <%# 좋아요가 아예 없는 경우, 싫어요 %>
     <% if !(Like.exists?(course_id: @course.id, user_id: @current_user.id)) %>
-        <%= hidden_field_tag 'boolean', false %>
-        좋아요가 아예 없는 경우, 싫어요
-        <%= button_tag id: 'is_like_create_btn' do %>
+        <%= button_tag class: 'dislike_btn', id: 'dislike_create_btn' do %>
+            <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
         <% end %>
         <%# 좋아요가 눌린 경우 %>
     <% elsif (Like.find_by(course_id: @course.id, user_id: @current_user.id)).is_like == false %>
-        싫어요가 눌린 경우
+        <%= button_tag class: 'dislike_btn', id: 'dislike_delete_btn' do %>
+            <i class="fa fa-heart favorite" aria-hidden="true"></i>
+        <% end %>
         <%# 싫어요가 눌린 경우 %>
     <% else %>
-        좋아요가 눌린 경우
+        <%= button_tag class: 'dislike_btn', id: 'dislike_create_like_delete_btn' do %>
+            <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
+        <% end %>
     <% end %>
 <% end %>
 
 <script>
-  <%# 좋아요가 아예 없는 경우 %>
-  $(document).on("click","#is_like_create_btn",function() {
+  <%# 좋아요 생성 %>
+  $(document).on("click","#like_create_btn",function() {
     var course_id = $('#c_id').val();
     var boolean = $('#boolean').val();
     $.ajax({
       method: "POST",
       url: '/users/is_like_create',
-      data: {c_id: course_id, boolean: boolean},
+      data: {c_id: course_id, boolean: true},
       dataType: "json",
       success: function ( result) {
         if(result.msg === "ok"){
-//          $('.favorite_btn i').addClass('not_favorite');
-//          $('.favorite_btn i').removeClass('favorite');
-          $('.favorite_btn').attr("id", "favorite_add_btn");
+          $('.like_btn i').addClass('favorite');
+          $('.like_btn i').removeClass('not_favorite');
+          $('.like_btn').attr("id", "like_delete_btn");
+          $('.dislike_btn').attr("id", "dislike_create_like_delete_btn");
         }else if(result.msg === "error"){
           console.log(result.msg);
         }
       }
     });
   });
-  <%# 좋아요가 눌린 경우 %>
-//  $(document).on("click","#favorite_add_btn",function() {
-//    var course_id = $('#c_id').val();
-//    $.ajax({
-//      method: "POST",
-//      url: '/users/favorites_add',
-//      data: {c_id: course_id},
-//      dataType: "json",
-//      success: function ( result) {
-//        if(result.msg === "ok"){
-//          $('.favorite_btn i').addClass('favorite');
-//          $('.favorite_btn i').removeClass('not_favorite');
-//          $('.favorite_btn').attr("id", "favorite_delete_btn");
-//        }else if(result.msg === "error"){
-//          console.log(result.msg);
-//        }
-//      }
-//    });
-//  });
+  <%# 좋아요 취소 %>
+  $(document).on("click","#like_delete_btn",function() {
+    var course_id = $('#c_id').val();
+    $.ajax({
+      method: "POST",
+      url: '/users/is_like_delete',
+      data: {c_id: course_id},
+      dataType: "json",
+      success: function ( result) {
+        if(result.msg === "ok"){
+          $('.like_btn i').addClass('not_favorite');
+          $('.like_btn i').removeClass('favorite');
+          $('.like_btn').attr("id", "like_create_btn");
+          $('.dislike_btn').attr("id", "dislike_create_btn");
+        }else if(result.msg === "error"){
+          console.log(result.msg);
+        }
+      }
+    });
+  });
+
+  <%# 좋아요 생성하면서 싫어요 취소 %>
+  $(document).on("click","#like_create_dislike_delete_btn",function() {
+    var course_id = $('#c_id').val();
+    $.ajax({
+      method: "POST",
+      url: '/users/is_like_update',
+      data: {c_id: course_id, boolean: true},
+      dataType: "json",
+      success: function ( result) {
+        if(result.msg === "ok"){
+          $('.like_btn i').addClass('favorite');
+          $('.like_btn i').removeClass('not_favorite');
+          $('.like_btn').attr("id", "like_delete_btn");
+          $('.dislike_btn i').addClass('not_favorite');
+          $('.dislike_btn i').removeClass('favorite');
+          $('.dislike_btn').attr("id", "dislike_create_like_delete_btn");
+        }else if(result.msg === "error"){
+          console.log(result.msg);
+        }
+      }
+    });
+  });
+
+
+  <%# 싫어요 생성 %>
+  $(document).on("click","#dislike_create_btn",function() {
+    var course_id = $('#c_id').val();
+    var boolean = $('#boolean').val();
+    $.ajax({
+      method: "POST",
+      url: '/users/is_like_create',
+      data: {c_id: course_id, boolean: false},
+      dataType: "json",
+      success: function ( result) {
+        if(result.msg === "ok"){
+          $('.dislike_btn i').addClass('favorite');
+          $('.dislike_btn i').removeClass('not_favorite');
+          $('.dislike_btn').attr("id", "dislike_delete_btn");
+          $('.like_btn').attr("id", "like_create_dislike_delete_btn");
+        }else if(result.msg === "error"){
+          console.log(result.msg);
+        }
+      }
+    });
+  });
+
+  <%# 싫어요 취소 %>
+  $(document).on("click","#dislike_delete_btn",function() {
+    var course_id = $('#c_id').val();
+    $.ajax({
+      method: "POST",
+      url: '/users/is_like_delete',
+      data: {c_id: course_id},
+      dataType: "json",
+      success: function ( result) {
+        if(result.msg === "ok"){
+          $('.dislike_btn i').addClass('not_favorite');
+          $('.dislike_btn i').removeClass('favorite');
+          $('.dislike_btn').attr("id", "dislike_create_btn");
+          $('.like_btn').attr("id", "like_create_btn");
+        }else if(result.msg === "error"){
+          console.log(result.msg);
+        }
+      }
+    });
+  });
+
+  <%# 싫어요 생성하면서 좋아요 취소 %>
+  $(document).on("click","#dislike_create_like_delete_btn",function() {
+    var course_id = $('#c_id').val();
+    $.ajax({
+      method: "POST",
+      url: '/users/is_like_update',
+      data: {c_id: course_id, boolean: false},
+      dataType: "json",
+      success: function ( result) {
+        if(result.msg === "ok"){
+          $('.dislike_btn i').addClass('favorite');
+          $('.dislike_btn i').removeClass('not_favorite');
+          $('.dislike_btn').attr("id", "dislike_delete_btn");
+          $('.like_btn i').addClass('not_favorite');
+          $('.like_btn i').removeClass('favorite');
+          $('.like_btn').attr("id", "like_create_dislike_delete_btn");
+        }else if(result.msg === "error"){
+          console.log(result.msg);
+        }
+      }
+    });
+  });
+
 </script>
