--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -13,20 +13,9 @@
   <% end %>
 </div>
 
-<%# 스크립트 분리할 것 %>
+<%# 워드 카운터 %>
 <script>
   $(document).ready(function() {
-//    body_validation();
-//    function body_validation() {
-//      var body = $("#evaluation_body");
-//      var body_counter     = $("#body_counter");
-//      var min_length  = body_counter.data("minimum-length");
-//
-//      body.keyup(function() {
-//        body_counter.text(min_length - $(this).val().replace(/ /g,'').length);
-//      });
-//    }
-
     body_validation();
     function body_validation() {
       var body = $("#evaluation_body");
