--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,7 +14,7 @@ ul.ui-autocomplete {
     background-color: #FFF;
     border-top: solid 1px #DDD;
     margin: 0;
-    padding: 0;
+    padding: 0; 
     a {
       color: #000;
       display: block;
@@ -45,4 +45,8 @@ select{
 
 .orange {
   color: #fc642d;
+}
+
+.fake_input{
+  cursor: text;
 }
