hide form when no like

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -91,7 +91,9 @@
       이미 평가를 했습니다.
     <% else %>
       <%= render 'like_form' %>
-      <%= render 'form' %>
+      <% if Like.exists?(course_id: @course.id, user_id: @current_user.id) %>
+        <%= render 'form' %>
+      <% end %>
     <% end %>
 
     <div class="tab_div">
