--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,43 +5,28 @@
         <p class="logo">CLASSLION</p>
           <%= form_for(@user, url: signup_path) do |f| %>
               <div class="input_group login_input email_input fit_div fake_input">
-                <div class="join_gp">
-                  <div class="input_div">
-                    <%= f.email_field :email, autofocus: true, placeholder: "이메일" %>
-                  </div>
-                  <div class="check_div">
-                    <span class="error" id="email_check"></span>
-                  </div>
+                <div class="input_div">
+                  <%= f.email_field :email, autofocus: true, placeholder: "이메일" %>
                 </div>
               </div>
               <p class="error" id="email_error"></p>
 
               <div class="input_group login_input email_input fit_div fake_input">
-                <div class="full_input input_div">
+                <div class="input_div">
                   <%= f.password_field :password, autocomplete: "off", placeholder: "비밀번호(8자~32자)", maxlength: 32%>
                 </div>
               </div>
 
               <div class="input_group login_input fit_div fake_input">
-                <div class="join_gp">
-                  <div class="input_div">
-                    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "비밀번호 확인(8~32자)",  maxlength: 32 %>
-                  </div>
-                  <div class="check_div">
-                    <span class="error" id="password_confirmation_error"></span>
-                  </div>
+                <div class="input_div">
+                  <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "비밀번호 확인(8~32자)",  maxlength: 32 %>
                 </div>
               </div>
               <p class="error" id="password_validate"></p>
 
               <div class="input_group login_input email_input fit_div fake_input">
-                <div class="join_gp">
-                  <div class="input_div">
-                    <%= f.text_field :nickname, autofocus: false, placeholder: "닉네임(2~8자)", maxlength: 8%>
-                  </div>
-                  <div class="check_div">
-                    <span class="error" id="nickname_check"></span>
-                  </div>
+                <div class="input_div">
+                  <%= f.text_field :nickname, autofocus: false, placeholder: "닉네임(2~8자)", maxlength: 8%>
                 </div>
               </div>
               <p class="error" id="nickname_error"></p>
@@ -55,7 +40,7 @@
               </div>
 
               <div class="input_group login_input fit_div">
-                <div class="full_input input_div">
+                <div class="input_div">
                   <%= f.collection_select :university_id, University.all, :id, :local_name, {:prompt => '학교'} %><br>
                 </div>
               </div>
@@ -71,8 +56,10 @@
   </div>
 </div>
 
-<script>
-  $(".input_group").on("touchstart click", function(){
-    $(this).find("input").focus();
-  });
-</script>
+<!--//   $(".input_group").on("touchstart click", function(){-->
+<!--//     $(this).find("input").focus();-->
+<!--//   });-->
+
+
+<%# 스크립트 추가 %>
+<script src="<%= asset_path 'mySessions.js' %>"></script>
