locale change links for development

--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -25,4 +25,7 @@
   <%= button_to '권한삭제', roles_remove_path, method: :post %>
   <%= button_to '포인트초기화', roles_reset_path, method: :post %>
   <%= button_to '포인트충전', roles_charge_path, method: :post %>
+  Language:
+  <%= link_to_unless_current "Korean", locale: "ko" %> |
+  <%= link_to_unless_current "English", locale: "en" %>
 </div>
