--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -68,7 +68,7 @@
                   </div>
                   <div class="reply_right col-xs-12">
                     <%= form_for(Comment.new, url: evaluation_comments_path(evaluation_id: e.id ), remote: true) do |f| %>
-                        <%= f.text_area :body, id: "comment_body#{e.id}" ,placeholder: "자유롭게 댓글을 입력해주세요.", rows: 3, class: "bubble_content bubble_write reply_box", autocomplete: "off" %>
+                        <%= f.text_area :body, id: "comment_body#{e.id}" ,placeholder: (t "comment.placeholder"), rows: 3, class: "bubble_content bubble_write reply_box", autocomplete: "off" %>
                         <div class="bubble_content reply_btn_div bubble_btn">
                           <%= f.submit "작성하기", class: "reply_write_btn" %>
                         </div>
