--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,11 @@
 <link rel="stylesheet" href="<%= asset_path 'nav_reset.css.scss' %>">
 <link rel="stylesheet" href="<%= asset_path 'nav_style.css.scss' %>">
 <link rel="stylesheet" href="<%= asset_path 'style.css.scss' %>">
+<link rel="stylesheet" href="<%= asset_path 'sweetalert2.min.css' %>">
 
 <script src="<%= asset_path 'jquery.barrating.js' %>"></script>
 <script src="<%= asset_path 'jquery.autocomplete.js' %>"></script>
+<script src="<%= asset_path 'sweetalert2.min.js' %>"></script>
 
 <%# Chart.js %>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
