--- a/app/views/courses/_wikis.html.erb
+++ b/app/views/courses/_wikis.html.erb
@@ -1,24 +1,24 @@
 <script src="<%= asset_path 'tinymce/tinymce.min.js' %>"></script>
 <script>
-tinymce.init({
-  selector: '#wiki_editor', 
-  theme: 'inlite',
-  plugins: 'image table link paste contextmenu textpattern autolink',
-  insert_toolbar: 'quickimage quicktable',
-  selection_toolbar: 'bold italic | quicklink h2 h3 blockquote',
-  inline: true,
-  paste_data_images: true,
-  //forced_root_block : false,
-  content_css: [
-    'https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
-    'https://www.tinymce.com/css/codepen.min.css'    
-  ]
-});
+  tinymce.init({
+    selector: '#wiki_editor', 
+    theme: 'inlite',
+    plugins: 'image table link paste contextmenu textpattern autolink',
+    insert_toolbar: 'quickimage quicktable',
+    selection_toolbar: 'bold italic | quicklink h2 h3 blockquote',
+    inline: true,
+    paste_data_images: true,
+    //forced_root_block : false,
+    content_css: [
+      'https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
+      'https://www.tinymce.com/css/codepen.min.css'    
+    ]
+  });
 </script>
 <% wiki = @course.recent_wiki %>
 <% if wiki.nil? %>
   <div id="wiki_editor">
-  아직 위키가 없습니다. 여기를 클릭하여 새로 만들어보세요!
+  아직 위키가 없습니다. 여기를 클릭하여 새로 만들어보세요!<br>
   사용법 : 마우스 우클릭하면 이미지 넣을 수 있고 blah blah
   </div>
 <% else %>
@@ -26,7 +26,7 @@ tinymce.init({
 <%= wiki.body.html_safe %>
   </div>
 <% end %>
-<a href="#" id="send_wiki_content">위키 전송</a>||<a href=/wiki/history>지난 기록 보기</a>
+<a href="#" id="send_wiki_content">위키 전송</a>||<a href="/wiki/<%= @course.id %>/history">지난 기록 보기</a>
 <script>
 $(function(){
   $("#send_wiki_content").on("click", function(e){
@@ -37,6 +37,7 @@ $(function(){
       method: 'post',
       data: {
         course_id: <%= @course.id %>,
+        comment: "우왕굳ㅋ",
         content: $("#wiki_editor").html()
       },
       dataType: "json",
