add swipe slider / 상세페이지 프론트 수정 / 강평<->위키 순서 변경

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -92,15 +92,15 @@
       <div class="tab_menu">
       <ul class="tab">
         <li>
-          <a href="javascript:void(0)" class="review_tab tablinks" onclick="openCity(event, 'review')" id="defaultOpen">
-            <%= image_tag "/assets/review_on.svg", class: "tab_img", alt: "review" %>
-            강의평가
+          <a href="javascript:void(0)" class="wiki_tab tablinks" onclick="openCity(event, 'wiki')" id="defaultOpen">
+            <%= image_tag "/assets/wiki_on.svg", class: "tab_img", alt: "review"%>
+            WIKI
           </a>
         </li>
         <li>
-          <a href="javascript:void(0)" class="wiki_tab tablinks" onclick="openCity(event, 'wiki')">
-            <%= image_tag "/assets/wiki_on.svg", class: "tab_img", alt: "review"%>
-            WIKI
+          <a href="javascript:void(0)" class="review_tab tablinks" onclick="openCity(event, 'review')">
+            <%= image_tag "/assets/review_on.svg", class: "tab_img", alt: "review" %>
+            강의평가
           </a>
         </li>
         <li class="filter">
