--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 <script src="<%= asset_path 'jquery.barrating.js' %>"></script>
 <script src="<%= asset_path 'jquery.autocomplete.js' %>"></script>
 <script src="<%= asset_path 'sweetalert2.min.js' %>"></script>
+<script src="<%= asset_path 'jquery.jscroll.min.js' %>"></script>
 
 <%= stylesheet_link_tag    'application', media: 'all'  %>
 <%= javascript_include_tag 'application' %>
